<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"

    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_line"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="-10dp"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/text_view_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/full_rounded_border"
            android:contentDescription="@string/avatar"
            android:src="@drawable/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/button_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="108dp"
            android:background="@color/transparent"
            android:contentDescription="@string/setting_button"
            android:src="@drawable/ic_baseline_settings_24"
            android:translationX="-3dp"
            android:translationY="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/layout_input_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:prefixText="Email : "
            app:prefixTextAppearance="@style/prefix"
            app:prefixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/non_bottom_border"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/mail_email_com"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/layout_input_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/non_bottom_border"
            android:textColorHint="@color/white"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/layout_input_skype"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_email"
            app:prefixText="Username : "
            app:prefixTextAppearance="@style/prefix"
            app:prefixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/edit_text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:background="@drawable/non_bottom_border"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/user_name"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_skype"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toTopOf="@id/layout_input_web"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_phone"
            app:prefixText="Password : "
            app:prefixTextAppearance="@style/prefix"
            app:prefixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_pass_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:background="@drawable/non_bottom_border"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_web"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blue"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_input_skype"
            app:prefixText="Phone :"
            app:prefixTextAppearance="@style/prefix"
            app:prefixTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_home_border"
                android:inputType="textWebEditText"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/phone"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/light_blue"
                android:padding="15dp"
                android:text="Register"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>