<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.5">


        <ImageView
            android:id="@+id/ic_quote_mark"
            android:layout_width="198dp"
            android:background="@color/teal_200"
            android:layout_height="179dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mememe"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="0.5"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/edit_text_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_top_border"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/teal_200"
                android:textColorHint="@color/teal_200"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_text_pass_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:background="@drawable/rounded_bottom_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/teal_200"
                android:textColorHint="@color/teal_200"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/edit_text_user_name"
                app:layout_constraintTop_toBottomOf="@id/edit_text_user_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_bt1"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/teal_200"
            android:text="Login"
            android:textSize="30sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up"
            android:layout_width="134dp"
            android:layout_height="58dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/teal_200"
            android:padding="15dp"
            android:text="Register"
            android:textSize="15sp"
            android:textStyle="bold"
            app:cornerRadius="8dp" />


    </LinearLayout>
</LinearLayout>